Fix CSS selector spacing and update Jest version

--- a/style.css
+++ b/style.css
@@ -15,16 +15,16 @@
     padding: 0;
 }
 
-.navbar li{
+.navbar ul li {
     display: inline;
     margin: 0 1em;
 }
 
-.navbar a{
+.navbar ul li a {
     color: #fff;
 }
 
-.main-content{
+.main-content {
     padding-top: 5em;
 }
 
